[package]
name = "stable-map"
version = "0.15.0"
edition = "2021"
description = "A hash map with temporarily stable indices"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mahkoh/stable-map"
readme = "../README.md"
keywords = ["hash", "no_std", "hashmap"]
categories = ["data-structures", "no-std"]

[features]
default = ["default-hasher", "inline-more", "equivalent"]
default-hasher = ["hashbrown/default-hasher"]
inline-more = ["hashbrown/inline-more"]
equivalent = ["hashbrown/equivalent"]
serde = ["dep:serde", "hashbrown/serde"]

[dependencies]
hashbrown = { version = "0.15", default-features = false }
min-max-heap = { version = "1.3.0", default-features = false }
serde = { version = "1", default-features = false, optional = true }

[dev-dependencies]
static_assertions = "1.1.0"
parking_lot = "0.12.3"
serde_json = "1.0.133"
